wizard: minor style fix, better logo contrast in index.php?wizard_done= (new logo on white background )
(cherry picked from commit a373d411f67cb18711101aaf65299e814a75a61e)

--- a/src/opnsense/www/themes/opnsense/assets/stylesheets/main.scss
+++ b/src/opnsense/www/themes/opnsense/assets/stylesheets/main.scss
@@ -222,6 +222,14 @@ body{
   }
 }
 
+div.content-box.wizard {
+    div {
+        img {
+            filter:invert(25%);
+        }
+    }
+}
+
 .tab-content{
   border-top: 0px;
   padding: 0px 0;
